--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>BlissCafe</title>
-</head>
-<body>
-This is the website.
-</body>
+  </head>
+  <body>
+    This is the website.
+  </body>
 </html>
+
