feat: refactor and consolidate global.css and styleguide.css

--- a/cafe_app/templates/contacts.html
+++ b/cafe_app/templates/contacts.html
@@ -3,8 +3,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="{% static 'contacts/globals.css' %}" />
-    <link rel="stylesheet" href="{% static 'contacts/styleguide.css' %}" />
+    <link rel="stylesheet" href="{% static 'globals.css' %}" />
+    <link rel="stylesheet" href="{% static 'styleguide.css' %}" />
     <link rel="stylesheet" href="{% static 'contacts/style.css' %}" />
   </head>
   <body>
