--- a/cafe_app/templates/about.html
+++ b/cafe_app/templates/about.html
@@ -3,8 +3,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="{% static 'about/globals.css' %}" />
-    <link rel="stylesheet" href="{% static 'about/styleguide.css' %}" />
+    <link rel="stylesheet" href="{% static 'globals.css' %}" />
+    <link rel="stylesheet" href="{% static 'styleguide.css' %}" />
     <link rel="stylesheet" href="{% static 'about/style.css' %}" />
   </head>
   <body>
