--- a/cafe_app/templates/team.html
+++ b/cafe_app/templates/team.html
@@ -3,8 +3,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="{% static 'team/globals.css' %}" />
-    <link rel="stylesheet" href="{% static 'team/styleguide.css' %}" />
+    <link rel="stylesheet" href="{% static 'globals.css' %}" />
+    <link rel="stylesheet" href="{% static 'styleguide.css' %}" />
     <link rel="stylesheet" href="{% static 'team/style.css' %}" />
   </head>
   <body>
