--- a/cafe_app/static/contacts/style.css
+++ b/cafe_app/static/contacts/style.css
@@ -1,3 +1,20 @@
+a{
+  text-decoration: none;
+  color: var(--color-5);
+}
+
+input{
+  padding: 8px 16px;
+  width: 100%;
+  background-color: var(--color-2);
+  border-radius: 35px;
+  border: 1px solid;
+  border-color: var(--color-5);
+}
+
+body{
+  background: var(--color-2);
+}
 .contact-page {
   display: flex;
   flex-direction: column;
@@ -8,8 +25,7 @@
 .contact-page .frame {
   display: flex;
   flex-direction: column;
-  width: 1280px;
-  height: 832px;
+  width: 100%;
   align-items: center;
   gap: 64px;
   padding: 16px 64px;
@@ -116,6 +132,7 @@
 .contact-page .frame-2 {
   display: flex;
   align-items: center;
+  margin-left: 300px;
   gap: 40px;
   position: relative;
   align-self: stretch;
@@ -255,25 +272,7 @@
   position: relative;
 }
 
-.contact-page .name {
-  padding: 8px 16px;
-  position: relative;
-  align-self: stretch;
-  width: 100%;
-  background-color: var(--color-2);
-  border-radius: 35px;
-  border: 1px solid;
-  border-color: var(--color-5);
-  flex: 1;
-  height: 49px;
-  margin-top: -1.00px;
-  font-weight: 600;
-  font-size: 20px;
-  font-family: "Poppins", Helvetica;
-  color: var(--color-5);
-  letter-spacing: 0;
-  line-height: normal;
-}
+
 
 .contact-page .div-wrapper {
   display: flex;
@@ -293,8 +292,7 @@
 
 .contact-page .text-wrapper-7 {
   position: relative;
-  flex: 1;
-  height: 49px;
+  height: 60px;
   margin-top: -1.00px;
   font-family: "Poppins", Helvetica;
   font-weight: 600;
@@ -305,19 +303,15 @@
 }
 
 .contact-page .frame-9 {
-  display: flex;
-  align-items: flex-start;
-  gap: 10px;
-  padding: 16px;
   position: relative;
-  flex: 1;
-  align-self: stretch;
-  width: 100%;
-  flex-grow: 1;
-  background-color: var(--color-2);
-  border-radius: 35px;
-  border: 1px solid;
-  border-color: var(--color-5);
+  height: 15rem;
+  margin-top: -1.00px;
+  font-family: "Poppins", Helvetica;
+  font-weight: 600;
+  color: var(--color-5);
+  font-size: 20px;
+  letter-spacing: 0;
+  line-height: normal;
 }
 
 .contact-page .text-wrapper-8 {
@@ -346,11 +340,19 @@
 }
 
 .contact-page .text-wrapper-9 {
+  display: flex;
+  width: 228px;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 16px 48px;
   position: relative;
-  width: fit-content;
+  flex: 0 0 auto;
+  background-color: var(--color-5);
+  border-radius: 35px;
   margin-top: -1.00px;
   font-family: "Poppins", Helvetica;
-  font-weight: 700;
+  font-weight: 600;
   color: var(--color-1);
   font-size: 24px;
   text-align: center;
@@ -360,12 +362,14 @@
 
 .contact-page .footer {
   display: flex;
-  width: 1280px;
-  height: 832px;
+  width: 100%;
   align-items: center;
   justify-content: space-around;
   padding: 64px;
+  flex: 1;
+  align-self: stretch;
   position: relative;
+  flex-grow: 1;
   background-color: var(--color-5);
 }
 
