--- a/cafe_app/templates/contacts.html
+++ b/cafe_app/templates/contacts.html
@@ -1,30 +1,34 @@
 {% load static %}
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="{% static 'globals.css' %}" />
-    <link rel="stylesheet" href="{% static 'styleguide.css' %}" />
-    <link rel="stylesheet" href="{% static 'contacts/style.css' %}" />
-  </head>
-  <body>
-    <div class="contact-page">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Contacts</title>
+    <link rel="stylesheet" href="{% static 'cafe_app/static/globals.css' %}" />
+    <link rel="stylesheet" href="{% static 'cafe_app/static/styleguide.css' %}" />
+    <link rel="stylesheet" href="{% static 'cafe_app/static/contacts/style.css' %}" />
+</head>
+<body>
+<div class="contact-page">
       <div class="frame">
         <div class="nav-bar">
-          <div class="logo"><div class="text-wrapper">Bliss Cafe</div></div>
+          <div class="logo"><div class="text-wrapper"><a href="{% url 'home' %}">Bliss Cafe</a></div></div>
           <div class="site-links">
-            <div class="div">Home</div>
-            <div class="div">Menu</div>
-            <div class="div">Contact</div>
-            <div class="text-wrapper-2">About</div>
-            <div class="text-wrapper-2">Team</div>
+            <div class="div"><a href="{% url 'home' %}">Home</a></div>
+            <div class="div"><a href="{% url 'menu' %}">Menu</a></div>
+            <div class="div"><a href="{% url 'contacts' %}">Contact</a></div>
+            <div class="text-wrapper-2"><a href="{% url 'about' %}">About</a></div>
+            <div class="text-wrapper-2"><a href="{% url 'team' %}">Team</a></div>
           </div>
           <div class="left-nav">
             <img
               class="vector"
               src="https://c.animaapp.com/KE5xh4eU/img/vector.svg"
             />
-            <div class="div">Find A Store</div>
+            <div class="div"><a href="">Find A Store</a></div>
           </div>
         </div>
         <div class="text-wrapper-3">Contact Us</div>
@@ -34,9 +38,9 @@
               class="img"
               src="https://c.animaapp.com/KE5xh4eU/img/vector-1.svg"
             />
-            <div class="text-wrapper-4">+254 74 200 000</div>
+            <div class="text-wrapper-4">+254 740 200 000</div>
             <div class="text-wrapper-5">
-              Got questions? We’re always here to chat over a cup of <br />coffee.
+              Got questions? We’re always here to chat over a cup of coffee.<br />
             </div>
           </div>
           <div class="rectangle"></div>
@@ -47,7 +51,7 @@
             />
             <div class="text-wrapper-4">blisscafe@gmail.com</div>
             <div class="text-wrapper-5">
-              Shoot us an email here. <br />We’re brewing up some <br />great conversations!
+              Shoot us an email here. <br />We’re brewing up some <br />great conversations!
             </div>
           </div>
           <div class="rectangle"></div>
@@ -58,7 +62,7 @@
             />
             <div class="text-wrapper-4">Nairobi, Westlands</div>
             <p class="text-wrapper-5">
-              Visit us and get to Sip, savor, and enjoy!
+              Visit us and get to Sip, savor, and enjoy!
             </p>
           </div>
         </div>
@@ -68,27 +72,24 @@
           <div class="frame-7">
             <div class="text-wrapper-6">Get In Touch!!</div>
             <div class="we-d-love-to-hear">
-              We’d Love to Hear From You!<br />Whether you have questions about 
-              our menu, need catering for your next event, or just want to chat about our 
-              love for coffee, we’re here for you. <br />Drop us a message, give us a call, or visit us<br /> in person – we can’t wait to connect!
+              We’d love to hear from you!<br />Whether you have questions about
+              our menu, need catering for your next event, or just want to chat about our
+              love for coffee, we’re here for you. <br />Drop us a message, give us a call, or visit us<br />
+                in person, we can’t wait to connect!
             </div>
           </div>
-          <div class="frame-8">
-            <input
-              class="name"
-              placeholder="&amp;nbsp;&amp;nbsp;Name"
-              type="text"
-            />
-            <div class="div-wrapper">
-              <div class="text-wrapper-7">&nbsp;&nbsp;Phone</div>
-            </div>
-            <div class="div-wrapper">
-              <div class="text-wrapper-7">Email</div>
-            </div>
-            <div class="frame-9"><div class="text-wrapper-8">Message</div></div>
-          </div>
+            <form action="" method="POST">
+                {% csrf_token %}
+                <div class="frame-8">
+                    <input type="text" class="text-wrapper-7" placeholder="Name:">
+                    <input type="text" class="text-wrapper-7" placeholder="Phone:">
+                    <input type="text" class="text-wrapper-7" placeholder="Email:">
+                    <input type="text" class="frame-9" placeholder="Message:">
+                </div>
+                <br>
+                <input type="submit" class="text-wrapper-9" value="Submit">
+            </form>
         </div>
-        <div class="frame-10"><div class="text-wrapper-9">Submit</div></div>
       </div>
       <footer class="footer">
         <div class="frame-11">
@@ -102,9 +103,9 @@
           </div>
           <div class="frame-12">
             <div class="text-wrapper-11">Services</div>
-            <div class="text-wrapper-16">Free wifi</div>
-            <div class="text-wrapper-16">Specialty coffee</div>
-            <div class="text-wrapper-16">Delicious bites</div>
+            <div class="text-wrapper-16">Free wifi</div>
+            <div class="text-wrapper-16">Specialty coffee</div>
+            <div class="text-wrapper-16">Delicious bites</div>
             <div class="text-wrapper-16">Catering</div>
           </div>
           <div class="frame-12">
@@ -117,11 +118,11 @@
           </div>
           <div class="frame-12">
             <div class="information">Information</div>
-            <div class="text-wrapper-16">Opening hours</div>
-            <div class="text-wrapper-22">Payment methods</div>
-            <div class="text-wrapper-16">Cafe location</div>
-            <div class="text-wrapper-16">Loyalty program</div>
-            <div class="text-wrapper-16">Dietary options</div>
+            <div class="text-wrapper-16">Opening hours</div>
+            <div class="text-wrapper-22">Payment methods</div>
+            <div class="text-wrapper-16">Cafe location</div>
+            <div class="text-wrapper-16">Loyalty program</div>
+            <div class="text-wrapper-16">Dietary options</div>
           </div>
           <div class="frame-13">
             <div class="text-wrapper-11">Social Media</div>
@@ -133,5 +134,5 @@
         </div>
       </footer>
     </div>
-  </body>
+</body>
 </html>
