feat:Intergrate map location

--- a/cafe_app/templates/contacts.html
+++ b/cafe_app/templates/contacts.html
@@ -28,7 +28,8 @@
               class="vector"
               src="https://c.animaapp.com/KE5xh4eU/img/vector.svg"
             />
-            <div class="div"><a href="">Find A Store</a></div>
+            <div class="div"><a href="https://maps.app.goo.gl/3MpCMnF3P9vNk3Ds9">Find Store</a></div>
+
           </div>
         </div>
         <div class="text-wrapper-3">Contact Us</div>
@@ -62,7 +63,7 @@
             />
             <div class="text-wrapper-4">Nairobi, Westlands</div>
             <p class="text-wrapper-5">
-              Visit us and get to Sip, savor, and enjoy!
+              Visit us and get to sip, savor, and enjoy!
             </p>
           </div>
         </div>
