--- a/cafe_app/static/globals.css
+++ b/cafe_app/static/globals.css
@@ -1,19 +1,36 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css");
-@import url("https://fonts.googleapis.com/css?family=Passions+Conflict:400|Poppins:600,500,200,400,700|Calligraffitti:400");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Passions+Conflict&display=swap");
+
 * {
+  margin: 0;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
 }
-html,
+
 body {
-  margin: 0px;
-  height: 100%;
+  font-family:
+    "Poppins" "Times New Roman",
+    Times,
+    serif;
 }
-/* a blue color as a generic focus style */
-button:focus-visible {
-  outline: 2px solid #4a90e2 !important;
-  outline: -webkit-focus-ring-color auto 5px !important;
+
+nav .logo {
+  color: #900;
+  font-family: "Passions Conflict", cursive;
+}
+
+button {
+  border: none;
+  outline: none;
 }
 a {
   text-decoration: none;
+}
+li {
+  list-style: none;
+  text-decoration: none;
+}
+input {
+  outline: none;
 }
