--- a/cafe_app/static/home/style.css
+++ b/cafe_app/static/home/style.css
@@ -1,763 +1,190 @@
-.home-page {
+section,
+footer {
+  height: 100vh;
+  overflow-y: hidden;
+  background: var(--color-1);
+}
+.hero {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  justify-content: start;
   position: relative;
-}
-
-.home-page .section {
-  object-fit: cover;
-  position: relative;
-  align-self: stretch;
-  width: 100%;
-  height: 832px;
-}
-
-.home-page .div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 16px;
-  padding: 16px 64px;
-  background-color: var(--color-2);
-  position: relative;
-  align-self: stretch;
-  width: 100%;
-  height: 832px;
-}
-
-.home-page .coffee {
-  display: flex;
-  flex-direction: column;
-  height: 371px;
-  align-items: center;
-  gap: 10px;
-  position: relative;
-  align-self: stretch;
-  width: 100%;
-}
-
-.home-page .text-wrapper {
-  position: relative;
-  align-self: stretch;
-  margin-top: -1.00px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 700;
-  font-style: italic;
   color: var(--color-5);
-  font-size: 24px;
-  text-align: center;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .assorted-coffee {
-  display: flex;
-  align-items: center;
-  gap: 32px;
-  position: relative;
-  align-self: stretch;
-  width: 100%;
-  flex: 0 0 auto;
-}
-
-.home-page .coffe-card {
-  display: flex;
-  flex-direction: column;
-  width: 160px;
-  height: 325px;
-  align-items: center;
-  justify-content: space-between;
-  padding: 8px;
-  position: relative;
-  background-color: var(--color-1);
-  border-radius: 5.33px;
-}
-
-.home-page .img {
-  position: relative;
-  align-self: stretch;
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.home-page .text-wrapper-2 {
-  position: relative;
-  align-self: stretch;
-  font-family: "Poppins", Helvetica;
-  font-weight: 700;
-  font-style: italic;
-  color: var(--color-5);
-  font-size: 12px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .text-wrapper-3 {
-  position: relative;
-  align-self: stretch;
-  font-family: "Poppins", Helvetica;
-  font-weight: 700;
-  font-style: italic;
-  color: var(--color-4);
-  font-size: 12px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .div-2 {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-  align-self: stretch;
-  width: 100%;
-  flex: 0 0 auto;
-}
-
-.home-page .text-wrapper-4 {
-  position: relative;
-  width: fit-content;
-  font-family: "Poppins", Helvetica;
-  font-weight: 700;
-  font-style: italic;
-  color: var(--color-5);
-  font-size: 12px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .btn {
-  all: unset;
-  box-sizing: border-box;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  padding: 4px 8px;
-  position: relative;
-  flex: 0 0 auto;
-  background-color: var(--color-5);
-  border-radius: 8px;
-}
-
-.home-page .order {
-  position: relative;
-  width: fit-content;
-  margin-top: -1.00px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 700;
-  font-style: italic;
-  color: var(--color-2);
-  font-size: 12px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .image {
-  position: relative;
-  width: 141.87px;
-  height: 200px;
-  object-fit: cover;
-}
-
-.home-page .desert {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  position: relative;
-  align-self: stretch;
-  width: 100%;
-  flex: 0 0 auto;
-}
-
-.home-page .image-2 {
-  width: 139.13px;
-  height: 200px;
-  position: relative;
-  object-fit: cover;
-}
-
-.home-page .image-3 {
-  width: 141.18px;
-  height: 200px;
-  position: relative;
-  object-fit: cover;
-}
-
-.home-page .image-4 {
-  align-self: stretch;
-  width: 100%;
-  height: 202px;
-  position: relative;
-  object-fit: cover;
-}
-
-.home-page .image-5 {
-  width: 150px;
-  height: 200px;
-  margin-left: -3.00px;
-  margin-right: -3.00px;
-  position: relative;
-  object-fit: cover;
-}
-
-.home-page .image-6 {
-  width: 149.22px;
-  height: 200px;
-  margin-left: -2.61px;
-  margin-right: -2.61px;
-  position: relative;
-  object-fit: cover;
-}
-
-.home-page .section-2 {
-  display: flex;
-  flex-direction: column;
-  width: 1280px;
-  height: 832px;
-  align-items: flex-start;
-  position: relative;
-  background-color: var(--color-2);
-}
-
-.home-page .frame {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 16px 64px;
-  position: relative;
-  flex: 1;
-  align-self: stretch;
-  width: 100%;
-  flex-grow: 1;
-  background-image: url(https://c.animaapp.com/eMNn26z6/img/frame-4.png);
+  background-image: url("assets/hero.jpeg");
+  object-fit: contain;
   background-size: cover;
-  background-position: 50% 50%;
 }
 
-.home-page .frame-2 {
+.hero nav {
+  height: 100px;
+  padding: 0px 64px;
+  display: flex;
+  width: 100%;
+  align-items: center;
+}
+.hero nav .logo {
+  font-size: 2rem;
+  flex-grow: 1;
+}
+.hero nav ul {
+  display: flex;
+  flex-grow: 1;
+  justify-content: space-evenly;
+}
+.hero nav .find-store {
+  flex-grow: 1;
+  display: flex;
+  justify-content: flex-end;
+  gap: 16px;
+}
+.hero a {
+  color: var(--color-5);
+}
+
+header {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  gap: 16px;
+  position: absolute;
+  padding: 0px 64px;
+  top: 50%;
+  width: 50%;
+  transform: translateY(-50%);
+}
+header h1 {
+  font-size: 3rem;
+}
+header button {
+  display: flex;
   justify-content: center;
   gap: 16px;
-  position: relative;
-  align-self: stretch;
-  width: 100%;
-  flex: 0 0 auto;
+  width: 300px;
+  padding: 16px 32px;
+  background-color: var(--color-4);
+  color: var(--color-1);
+  font-weight: bold;
+  border-radius: 16px;
+  border: none;
 }
-
-.home-page .our-coffee-beans-are {
-  position: relative;
-  width: fit-content;
-  margin-top: -1.00px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 700;
-  color: var(--color-5);
-  font-size: 24px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .visit-our-patners-wrapper {
-  display: inline-flex;
-  align-items: center;
+section.menu {
+  padding: 16px 64px;
+  background-color: var(--color-2);
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  gap: 10px;
-  padding: 8px 32px;
+  gap: 16px;
+}
+.menu .cards {
+  display: flex;
+  gap: 8px;
+  overflow-x: hidden;
+}
+.menu article.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 250px;
+  width: 150px;
+  padding: 8px;
+  border-radius: 8px;
+  background: var(--color-1);
+}
+
+.menu .card img {
+  height: 150px;
+  width: 100%;
+}
+
+.menu .card button {
+  padding: 4px 8px;
+  background-color: var(--color-4);
+  color: var(--color-1);
+  font-weight: bold;
+  border-radius: 6px;
+  border: none;
+}
+
+section.sources {
   position: relative;
-  flex: 0 0 auto;
-  background-color: var(--color-5);
+  padding: 16px 64px;
+
+  background-image: url("assets/sources.jpeg");
+  object-fit: contain;
+  background-size: cover;
+}
+section.sources div {
+  font-size: 24px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+section.sources button {
+  padding: 4px 8px;
+  background-color: var(--color-4);
+  color: var(--color-1);
+  font-weight: bold;
+  border-radius: 6px;
+  border: none;
+}
+
+section.testimonials {
+  display: flex;
+  background-color: var(--color-2);
+  padding: 16px 64px;
+  flex-direction: column;
+  justify-content: center;
+}
+.testimonials h2 {
+  margin: 8px;
+  font-size: 2rem;
+  font-weight: bold;
+}
+div.testimonials {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.testimonial {
+  width: 300px;
+  background: var(--color-1);
+  padding: 16px;
   border-radius: 8px;
 }
-
-.home-page .text-wrapper-5 {
-  position: relative;
-  width: fit-content;
-  margin-top: -1.00px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 700;
-  color: var(--color-2);
-  font-size: 16px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .testimonials-section {
+.testimonial .customer-header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 16px;
-  position: relative;
-  flex: 1;
-  align-self: stretch;
-  width: 100%;
-  flex-grow: 1;
-}
-
-.home-page .our-happy-customers {
-  position: relative;
-  width: fit-content;
-  font-family: "Poppins", Helvetica;
-  font-weight: 700;
-  color: var(--color-5);
-  font-size: 24px;
-  text-align: center;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .testimonials {
-  display: inline-flex;
-  align-items: flex-start;
-  gap: 16px;
-  position: relative;
-  flex: 0 0 auto;
-}
-
-.home-page .testimonial-wrapper {
-  display: inline-flex;
-  align-items: flex-start;
-  gap: 10px;
-  position: relative;
-  flex: 0 0 auto;
-}
-
-.home-page .testimonial {
-  display: flex;
-  flex-direction: column;
-  width: 350px;
-  height: 150px;
-  align-items: flex-start;
-  gap: 8px;
-  padding: 16px;
-  position: relative;
-  background-color: var(--color-1);
-  border-radius: 5px;
-}
-
-.home-page .customer {
-  display: inline-flex;
-  align-items: center;
-  gap: 8px;
-  position: relative;
-  flex: 0 0 auto;
-}
-
-.home-page .ellipse {
-  position: relative;
-  width: 50px;
-  height: 50px;
-}
-
-.home-page .frame-3 {
-  display: inline-flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 10px;
-  position: relative;
-  flex: 0 0 auto;
-}
-
-.home-page .text-wrapper-6 {
-  position: relative;
-  width: fit-content;
-  margin-top: -1.00px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 700;
-  color: var(--color-3);
-  font-size: 12px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .text-wrapper-7 {
-  position: relative;
-  width: fit-content;
-  font-family: "Poppins", Helvetica;
-  font-weight: 400;
-  color: var(--color-4);
-  font-size: 11px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .rating {
-  position: relative;
-  align-self: stretch;
-  flex: 0 0 auto;
-}
-
-.home-page .this-is-the-best {
-  position: relative;
-  width: fit-content;
-  margin-right: -11.00px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 400;
-  color: var(--color-5);
-  font-size: 12px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .i-ordered-this {
-  position: relative;
-  width: fit-content;
-  margin-right: -4.00px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 400;
-  color: var(--color-5);
-  font-size: 12px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .you-order-they-roast {
-  position: relative;
-  width: fit-content;
-  font-family: "Poppins", Helvetica;
-  font-weight: 400;
-  color: var(--color-5);
-  font-size: 12px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .news-letter {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 32px;
-  position: relative;
-  flex: 1;
-  align-self: stretch;
-  width: 100%;
-  flex-grow: 1;
-  background-color: var(--color-1);
-}
-
-.home-page .letter {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   gap: 16px;
-  position: relative;
-  align-self: stretch;
-  width: 100%;
-  flex: 0 0 auto;
 }
-
-.home-page .join-and-get-off {
-  position: relative;
-  align-self: stretch;
-  margin-top: -1.00px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 700;
-  color: var(--color-5);
-  font-size: 24px;
-  text-align: center;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .stay-upto-date-with {
-  position: relative;
-  width: fit-content;
-  font-family: "Poppins", Helvetica;
-  font-weight: 400;
-  color: var(--color-4);
-  font-size: 16px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .subscribe {
+.newsletter-section {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.newsletter {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+footer {
+  width: 100%;
+  background-color: var(--color-4);
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 64px;
-  position: relative;
-  align-self: stretch;
-  width: 100%;
-  flex: 0 0 auto;
-}
-
-.home-page .email {
-  width: 300px;
-  height: 60px;
-  padding: 16px 32px;
-  position: relative;
-  background-color: var(--color-2);
-  border-radius: 9px;
-  border: 1px solid;
-  border-color: var(--color-3);
-  font-family: "Poppins", Helvetica;
-  font-weight: 700;
-  color: var(--color-3);
-  font-size: 16px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .div-wrapper {
-  display: flex;
-  width: 300px;
-  height: 60px;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  padding: 16px 32px;
-  position: relative;
-  background-color: var(--color-5);
-  border-radius: 9px;
-}
-
-.home-page .text-wrapper-8 {
-  position: relative;
-  width: fit-content;
-  margin-top: -5.00px;
-  margin-bottom: -3.00px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 700;
-  color: var(--color-2);
-  font-size: 24px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: 64px;
-  position: relative;
-  flex: 1;
-  align-self: stretch;
-  width: 100%;
-  flex-grow: 1;
-  background-color: var(--color-5);
-}
-
-.home-page .frame-4 {
-  display: flex;
-  width: 1154.2px;
-  align-items: flex-start;
-  justify-content: space-between;
-  position: relative;
-  margin-left: -1.10px;
-  margin-right: -1.10px;
-}
-
-.home-page .text-wrapper-9 {
-  position: relative;
-  align-self: stretch;
-  width: 183px;
-  margin-top: -1.00px;
-  font-family: "Passions Conflict", Helvetica;
-  font-weight: 400;
   color: var(--color-1);
-  font-size: 64px;
-  letter-spacing: 0;
-  line-height: normal;
+  padding: 16px 64px;
 }
-
-.home-page .frame-5 {
+.footer-content {
   display: flex;
-  flex-direction: column;
-  width: 112px;
-  align-items: center;
-  gap: 10px;
-  position: relative;
+  width: 100%;
+  justify-content: space-between;
 }
 
-.home-page .text-wrapper-10 {
-  position: relative;
-  align-self: stretch;
-  margin-top: -1.00px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 700;
-  color: var(--color-2);
-  font-size: 16px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .text-wrapper-11 {
-  position: relative;
-  width: 114px;
-  margin-left: -1.00px;
-  margin-right: -1.00px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 200;
-  color: var(--color-2);
-  font-size: 10px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .text-wrapper-12 {
-  position: relative;
-  align-self: stretch;
-  height: 15px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 200;
-  color: var(--color-2);
-  font-size: 10px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .text-wrapper-13 {
-  position: relative;
-  width: 112px;
-  height: 17px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 200;
-  color: var(--color-2);
-  font-size: 10px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .text-wrapper-14 {
-  position: relative;
-  width: 112px;
-  height: 14px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 200;
-  color: var(--color-2);
-  font-size: 10px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .frame-6 {
-  display: flex;
-  flex-direction: column;
-  width: 100px;
-  align-items: center;
-  gap: 10px;
-  position: relative;
-}
-
-.home-page .text-wrapper-15 {
-  position: relative;
-  align-self: stretch;
-  font-family: "Poppins", Helvetica;
-  font-weight: 200;
-  color: var(--color-2);
-  font-size: 10px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .frame-7 {
-  display: flex;
-  flex-direction: column;
-  width: 110px;
-  align-items: center;
-  gap: 10px;
-  position: relative;
-}
-
-.home-page .text-wrapper-16 {
-  position: relative;
-  align-self: stretch;
-  height: 13px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 200;
-  color: var(--color-2);
-  font-size: 10px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .text-wrapper-17 {
-  position: relative;
-  align-self: stretch;
-  height: 17px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 200;
-  color: var(--color-2);
-  font-size: 10px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .text-wrapper-18 {
-  position: relative;
-  align-self: stretch;
-  height: 14px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 200;
-  color: var(--color-2);
-  font-size: 10px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .text-wrapper-19 {
-  position: relative;
-  width: 109px;
-  height: 12px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 200;
-  color: var(--color-2);
-  font-size: 10px;
-  letter-spacing: 0;
-  line-height: normal;
-  white-space: nowrap;
-}
-
-.home-page .text-wrapper-20 {
-  position: relative;
-  width: 110px;
-  height: 14px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 200;
-  color: var(--color-2);
-  font-size: 10px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .frame-8 {
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-  position: relative;
-  flex: 0 0 auto;
-}
-
-.home-page .text-wrapper-21 {
-  position: relative;
-  width: 99px;
-  font-family: "Poppins", Helvetica;
-  font-weight: 200;
-  color: var(--color-2);
-  font-size: 10px;
-  letter-spacing: 0;
-  line-height: normal;
-}
-
-.home-page .frame-9 {
-  display: inline-flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 16px;
-  position: relative;
-  align-self: stretch;
-  flex: 0 0 auto;
-}
-
-.home-page .frame-10 {
-  position: relative;
-  flex: 0 0 auto;
+.footer-content h4 {
+  font-size: 1.5rem;
+  font-weight: bold;
 }
