--- a/cafe_app/templates/contacts.html
+++ b/cafe_app/templates/contacts.html
@@ -97,7 +97,7 @@
     <!-- Footer Section -->
     <footer class="footer">
         <div class="frame-11">
-            <div class="text-wrapper-10">Bliss Cafe</div>
+            <div ><a class="text-wrapper-10" href="{% url 'home' %}">Bliss Cafe</a></div>
             <div class="frame-12">
                 <div class="text-wrapper-11">Privacy</div>
                 <div class="text-wrapper-12">Privacy Priority</div>
