--- a/cafe_app/templates/home.html
+++ b/cafe_app/templates/home.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <link href="{% static 'assets/fontawesome/css/fontawesome.min.css' %}" rel="stylesheet" />
     <link href="{% static 'assets/fontawesome/css/solid.min.css' %}" rel="stylesheet" />
-    <link rel="stylesheet" href="{% static 'globals.css' %}" />
-    <link rel="stylesheet" href="{% static 'styleguide.css' %}" />
-    <link rel="stylesheet" href="{% static 'home/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'cafe_app/static/globals.css' %}" />
+    <link rel="stylesheet" href="{% static 'cafe_app/static/styleguide.css' %}" />
+    <link rel="stylesheet" href="{% static 'cafe_app/static/home/style.css' %}" />
     <title>Bliss Cafe</title>
   </head>
   <body>
@@ -15,11 +15,11 @@
       <nav>
         <p class="logo">Bliss cafe</p>
         <ul>
-        <li><a href="/home">Home</a></li>
-        <li><a href="/menu">Menu</a></li>
-        <li><a href="/contact-us">Contact Us</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/The-Team">The Team</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="{% url 'menu' %}">Menu</a></li>
+        <li><a href="{% url 'contacts' %}">Contact Us</a></li>
+        <li><a href="{% url 'about' %}">About</a></li>
+        <li><a href="{% url 'team' %}">The Team</a></li>
         </ul>
         <p class="find-store">  <i class="fa-solid fa-location-dot"></i> Find A Store</p>
       </nav>
